# tavura

./: .gitignore  LICENSE  README.md  how-run.md  orchestrator.py  pyproject.toml  requirements.txt
.github/: README.md
Core/: aplication.py  browser.py  getbacklogs.py  login.py  main.py
Core/Devops/: browser.py  constants.py  login.py  main.py
app/: backlog.py  browser.py  comments.py  constants.py  excel.py  login.py  main.py  manager.py  metadata.py  teste.py  treatment.py
app/auth/: login.py
app/drivers/: browser.py
app/system/: backlog.py  comments.py  constants.py  excel.py  manager.py  treatment.py
